 Tue Jul 12 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-2
  - Fix bug: can't be installed by command 'rpm -ivh'
  - change option -A from --all to --auto-only
 Tue Jul 7 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-1
  - code clean up
  - Fix bug: log directory doesn't have millisecond
 Fri Jun 29 2012 Jing Wang <jing.j.wang@intel.com> 2.2.0 
  - code clean up. remove original parser and filter, but use etree instead
  - for normal and external test, filter is done by testkit-lite in uniform way
  - update manual doc
  - Add performance test support
  - Support case hint when running external test
  - Support run under Windows (Non-install mode)
  - Fix bug: result location issue
  - Fix bug: execution_type filter issue in testkit-web
  - Fix bug: fullscreen issue
 Fri Mar 30 2012 Yugang Fan <yugang.fan@intel.com> 2.1.0-4 
  - Add license header to web/index.html and web/manualharness.html.
 Tue Mar 27 2012 Tian Xu <xux.tian@intel.com> 2.1.0-2 
  - Add pretty print manual case detials
  - Fixed bug: can't get final result xml by "-o" option when
  testkit-lite be killed
  - Implement feature to create txt type result for Web test
  - Remove option "--webnotpoll" and update default result file ext. to ".result" + ext
  - Code clean up, remove unnecessary dependents and platform specifical code
  - Add support for running manual test in testkit-web
  - Implement feature: Implement a local http server to handle post request
 Thu Feb 16  2012 Tian, Xu <xux.tian@intel.com> 2.0.0-5
  - Fixed bug: save result xml when each testcase executed done 
 Sun Feb  5  2012 Tian, Xu <xux.tian@intel.com> 2.0.0-4 
  - Update chrominue default start up paramters 
 Sun Jan 18 2012 Wang, Jing <jing.j.wang@intel.com> 2.0.0-3
  - Resolve page complete but not timeout issue in web testing
 Sun Jan 16 2012 Tian, Xu <tian.xux@intel.com> 2.0.0-2
  - Fix timeout, but can't kill issue
 Sun Jan 15 2012 Tian, Xu <tian.xux@intel.com> 2.0.0-1