@@ -27,3 +27,5 @@ web/index.html
 web/jquery.js
 web/manualharness.html
 xsd/test_definition.xsd
+xsd/tests.css
+xsd/resultstyle.xsl
