@@ -2,13 +2,16 @@
 install-scripts = /usr/bin
 install-lib = /usr/lib/python2.7/site-packages
 [bdist_rpm]
-release = 2
+release = 3
 packager = huihuix.zhang@intel.com
 requires = python
 pre_install = preinstall
 install_script = fakeinstall
 post_install = postinstall
-changelog = * Tue Jul 12 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-2
+changelog = * Tue Jul 26 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-3
+  - modify index and manualharness to make test widgets display better
+  - add suppor to view test result in XSL format
+ Tue Jul 12 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-2
   - Fix bug: can't be installed by command "rpm -ivh"
   - change option A from "all" to "auto-only"
  Tue Jul 7 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-1
