@@ -1,0 +1,159 @@
+@charset "UTF-8";
+/* CSS Document */
+
+/* @group General styles */
+
+/* @group reset */
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,code,del,dfn,em,img,q,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,input
+	{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 0.96em;
+	font-family: arial;
+	vertical-align: baseline;
+}
+
+p {
+	text-align: left;
+}
+
+table {
+	border-collapse: separate;
+	border-spacing: 0;
+}
+
+caption,th,td {
+	text-align: left;
+	font-weight: normal;
+}
+
+table,td,th {
+	vertical-align: middle;
+}
+
+table {
+	margin-bottom: 1.4em;
+	width: 100%;
+}
+
+th {
+	border-bottom: 1px solid #eee;
+	background-color: #0000FF;
+}
+
+th a,th {
+	color: #fff;
+}
+
+th {
+	font-weight: bold;
+	vertical-align: bottom;
+}
+
+th:first-child {
+	border-left-style: none;
+}
+
+td:first-child {
+	border-left: none;
+}
+
+th,td,caption {
+	padding: 4px 10px 4px 5px;
+}
+
+td {
+	border-left: 1px solid #ccc;
+	border-top: 1px solid #ccc;
+	font-weight: normal;
+	
+	border-bottom: 1px solid #eee;
+	background-color: #99BBFF;
+}
+
+td.title{
+	background-color: #FFF;
+}
+
+td.yellow_rate {
+	background-color: #ffcc00;
+}
+
+td.green_rate {
+	background-color: #33cc33;
+}
+
+td.dgreen_rate {
+	background-color: #339933;
+}
+
+td.red_rate {
+	background-color: #FF3333;
+}
+
+tr td:first-child {
+	border-left: none;
+}
+
+/* @group basic typography */
+h1,h2,h3 {
+	font-family: Arial, sans-serif;
+	font-weight: bold;
+}
+
+h1 {
+	font-size: 2em;
+	line-height: 1;
+	color: #000;
+	margin-bottom: 0.75em;
+	padding-top: 0.25em;
+}
+
+h1 em {
+	font-style: normal;
+	color: #909090;
+}
+
+h2 {
+	font-size: 1.6666em;
+	line-height: 1;
+	color: #000;
+	margin: 1.0em 0 0.5em 0;
+	border-top: 1px solid #ccc;
+	padding-top: 20px;
+}
+
+h2 small {
+	font-size: .55em;
+	font-weight: normal;
+	margin-left: 1em;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+h3 {
+	font-size: 1.3333em;
+	line-height: 1.125;
+	color: #000;
+	margin-bottom: 1em;
+}
+
+h4 {
+	font-size: 1.2em;
+	line-height: 1.25;
+	margin-bottom: 1.25em;
+}
+
+h5 {
+	font-size: 1em;
+	font-weight: bold;
+	margin-bottom: 1.5em;
+}
+
+h6 {
+	font-size: 1em;
+	font-weight: bold;
+}
