@@ -1,3 +1,6 @@
+ Tue Jul 26 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-3
+  - modify index and manualharness to make test widgets display better
+  - add suppor to view test result in XSL format
  Tue Jul 12 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-2
   - Fix bug: can't be installed by command 'rpm -ivh'
   - change option -A from --all to --auto-only
